hydroflow/tests/compile-fail/surface_dest_sink_baditem.stderr
error[E0271]: type mismatch resolving `<impl Pusherator<Item = (bytes::Bytes, SocketAddr)> as Pusherator>::Item == bytes::Bytes`
  --> tests/compile-fail/surface_dest_sink_baditem.rs:14:16
   |
13 |               -> map(|i| bytes::Bytes::from_static(&b"hello world!"[i..(i + 2)]))
   |  ________________-
14 | |             -> dest_sink(outbound);
   | |                ^^^^^^^^^^^^^^^^^^-
   | |________________|_________________|
   |                  |                 required by a bound introduced by this call
   |                  expected struct `Bytes`, found tuple
   |
   = note: expected struct `bytes::Bytes`
               found tuple `(bytes::Bytes, SocketAddr)`
note: required by a bound in `check_pivot_run`
  --> tests/compile-fail/surface_dest_sink_baditem.rs:13:16
   |
13 |               -> map(|i| bytes::Bytes::from_static(&b"hello world!"[i..(i + 2)]))
   |  ________________^
14 | |             -> dest_sink(outbound);
   | |__________________________________^ required by this bound in `check_pivot_run`
